objects/Client_Intake_Process_History__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_CASESAFEID_Formula__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACCOUNT CASESAFEID Formula</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_CASESAFEID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACCOUNT CASESAFEID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_AM_No_UWR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE AM No UWR</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APW_AHG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APW/AHG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASF_QueryString1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASF QueryString1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASF_QueryString2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASF QueryString2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASF_QueryString3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASF QueryString3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FMHP ASO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DBA_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_for_Conga__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account ID  for Conga</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CIP History</relationshipLabel>
        <relationshipName>CIP_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Added_plans_or_plans_changed_HCR_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Added plans or plans changed HCR Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_in_System__c</fullName>
        <label>Age in System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_of_your_plans_changed_HCR_status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Any of your plans changed HCR status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Claims_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Claims Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_there_changes_to_Group_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Are there changes to Group Structure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Implementer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_ASF_NB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attention ASF NB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BH_Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Renewal_Anniversary_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Renewal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Renewal_Anniversary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Renewal Anniversary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefits</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Commissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Commissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIP_Approval_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Approval Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Audit_End_Date1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Audit End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CIP_Audit_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Audit Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CIP_Audit_Weekday_Counter__c</fullName>
        <label>CIP Audit Weekday Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIP_Auto_Number__c</fullName>
        <label>CIP Auto Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIP_Detail_Count__c</fullName>
        <label>CIP Detail Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIP_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIP_Effective_Month__c</fullName>
        <label>CIP Effective Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIP_Effective_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Effective Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Exists__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Exists</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Topic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIPs__c</fullName>
        <label>CIPs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commingle_Behavioral_Health__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commingle Behavioral Health</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commingle_Rx_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commingle Rx Vendor</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conga Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered_Members__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Covered Members</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Pre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Pre-Cert Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DIf_yes_please_explain_the_changes_made__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIf yes, please explain the changes made</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIf_yes_please_explain_those_updates__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIf yes, please explain updates made</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Interface__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Interface</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_CIP_Status_to_SME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date CIP Status to SME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Scheduled_Discovery_Call__c</fullName>
        <label>Days to Scheduled Discovery Call</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Call_Held__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discovery Call Held:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_call_Desired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discovery call Desired?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_want_the_SBC_created_by_the_SBC_t__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Want the SBC created by the SBC team?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Anthem_Produce_Benefit_Booklets__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does Anthem Produce Benefit Booklets?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Anthem_produce_SBC_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does Anthem produce SBC&apos;s?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_client_have_FSA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does client have FSA?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_request_impact_DIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does this request impact DIT?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_request_require_a_new_SBC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does this request require a new SBC?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_require_a_new_Benefit_Booklet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Does this require a new Benefit Booklet?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_DIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Edit DIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_to_be_sent_to_3rd_party_vend__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility sent to 3rd party vendor?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>3rd Party Eligibility Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equity_Health_Integration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Equity Health Integration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchanges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchanges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_Min_Prem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FMHP FI/Min Prem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Mental_Health_Parity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Federal Mental Health Parity UW Review?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiduciary_Services_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiduciary Services Sold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Pre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Pre-Certification Rules</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Last_Modified_by_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GS Last Modified by Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_SME_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GS SME Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_NumberId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group NumberId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_Display__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Last_Modified_by_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Services Last Modified by Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HCR_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCR Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCR_Form__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCR Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCR_form_included__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCR form included in prior submission?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_conv_needed_from_carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>History conv needed from prior carrier?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Effective_Date_is_Retro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Effective Date is Retro</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Migration_System_Being_Migrated_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Migration, System Being Migrated From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_please_list_UWR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If so, please list UWR #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain_the_changes_made_l__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, please explain the changes made</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain_updates_made_l__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, please explain updates made</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_indicate_pkges_contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, indicate pkgs/CC changing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Contract_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Codes/Packages &amp; Customization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_Client_intent_attached__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is the Client intent attached?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_CIP_intake_for_a_client_renewal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is this CIP intake for a client renewal?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Groupnew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JAA Groupnew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Capture__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Modified Date Capture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_legislative_updates_for_group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandatory legislative updates for Group?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Management__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Management</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_CIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration CIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modification_to_an_existing_SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modification to an existing SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modification_to_existing_benefit_booklet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modification to existing benefit booklet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modification_to_existing_booklet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modification to existing booklet</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Multiple_3rd_Party_Eligibility_Vendors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Multiple Vendors apply, list here:</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Rx_Vendors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Multiple RX Vendors apply, list here:</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Account_Quote_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Account Quote Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_NASCO_HEQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New NASCO HEQ?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPPTY_CASESAFEID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OPPTY CASESAFEID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_3rd_Party_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other 3rd Party Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_BH_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other BH Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_FSA_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other FSA Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Rx_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Rx Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name_Combined__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Name Combined</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packages_suffixes_sections_impacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Packages/suffixes/sections impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Innovation_Initiatives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Innovation Initiatives Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_AE_AM_Action_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending AE AM Action Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee Apply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy/Rx</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Year Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plasm_CR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plasm CR Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Implementation_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Implementation Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_SME_MB_Strings_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior SME MB Strings Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_SME_SP_Strings_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior SME SP Strings Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q3_Impacted_Contract_Codes_Packages__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DEP Impacted Contract Codes / Packages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QHE_MIA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QHE/MIA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RBB_Castlight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBB Castlight</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Retro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Retro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Next_Steps__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommended Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_AM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region AM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reasons__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reasons</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Finalized_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notification_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Notification Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Status_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retro Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Retro_Status_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retro Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Retro_Status_Weekday_Counter__c</fullName>
        <label>Retro Status Weekday Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Description_of_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision Description of Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revison_Notes_and_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revison Notes and Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rx_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Due_Back_to_Account_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SBC Due Back to Account Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Group Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_LOB_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy LOB ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>